# awsgame-backend

./: .gitignore  API_GATEWAY_SETUP.md  AWS_BEDROCK_ASYNC_ISSUE.md  Dockerfile  INPUT_ANALYSIS.md  README.md  SETUP.md  TESTING.md  TROUBLESHOOTING.md  agent_invocation.py  agent_invocation_review.md  custom_exceptions.py  docker_troubleshooting.md  environment_variables.md  example.env  exception_classes_explanation.md  execution_guide.md  folder_structure_analysis.md  lambda_container_env_vars.md  lambda_error_handling.md  logging_documentation.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  workbook.ipynb
amazon-q-recommendations/: CONTAINER_DEPLOYMENT.md  LAMBDA_SETUP.md  VERIFICATION.md
src/: test.py
src/awsgame/: __init__.py  config.py  logger.py
src/awsgame/clients/: __init__.py  bedrock.py  bedrock.py.new
src/awsgame/exceptions/: __init__.py  custom_exceptions.py
src/awsgame/handlers/: __init__.py  api_utils.py  lambda_handler.py  new_lambda_handler.py
tests/: conftest.py
tests/unit/: test_bedrock_client.py
